--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "jquery.async.validator",
-  "version": "1.0.0",
-  "dependencies": [
-    "grunt-contrib-uglify",
-    "grunt-contrib-watch",
-    "grunt-contrib-copy",
-    "fetch",
-    "grunt-mocha"
-  ]
+  "version": "0.0.1",
+  "devDependencies": {
+    "grunt": "~0.4.0",
+    "fetch": "*",
+    "grunt-contrib-watch": "~0.1.4",
+    "grunt-contrib-uglify": "~0.1.0",
+    "grunt-mocha": "~0.2.1",
+    "grunt-contrib-jshint": "~0.1.0",
+    "grunt-contrib-concat": "~0.1.1",
+    "grunt-wrap": "~0.2.0"
+  }
 }
